--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
+        <img class="top-cloud" src="cloud.png" alt="cloud-image">
         <h1>I am Tushar</h1>
         <p> <h2> <span class="pro">Pro</span>grammer </h2> </p>
-        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
-        <img src="images/mountain.png" alt="mountain-image">
+        <img class="bottom-cloud" src="cloud.png" alt="cloud-image">
+        <img src="mountain.png" alt="mountain-image">
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img class="my-image" src="images/tushar.png" alt="my-image">
+          <img class="my-image" src="tushar.png" alt="my-image">
           <h2>Hello.</h2>
           <p>I am a Second year student pursuing Bachelor of Technology- B.Tech focused on Computer Science from Amity University.</p>
         </div>
@@ -29,7 +29,7 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="code-img" src="images/computer-modified.png" alt="code-img">
+            <img class="code-img" src="computer-modified.png" alt="code-img">
             <h3>Design and development</h3>
             <p>I am familiar with Java and C am currently studying Full Stack Web development and Data structures and Algorithms. I have mastered HTML and CSS and currently learning bootstrap in Full stack web development</p>
           </div>
